@@ -3,23 +3,19 @@ package edu.colorado.phet.molarity.view;
 
 import java.awt.BasicStroke;
 import java.awt.Color;
-import java.awt.Dimension;
 import java.awt.Font;
 import java.awt.Stroke;
 import java.awt.geom.Arc2D;
-import java.awt.geom.Ellipse2D;
 import java.awt.geom.Point2D;
 import java.awt.geom.RoundRectangle2D;
 import java.text.DecimalFormat;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 
-import javax.swing.JFrame;
-import javax.swing.WindowConstants;
-
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 import edu.colorado.phet.common.phetcommon.util.DefaultDecimalFormat;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.util.logging.LoggingUtils;
 import edu.colorado.phet.common.phetcommon.view.util.ColorUtils;
@@ -27,8 +23,7 @@ import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLNode;
 import edu.colorado.phet.common.piccolophet.simsharing.NonInteractiveEventHandler;
 import edu.colorado.phet.molarity.MolarityResources.Strings;
-import edu.colorado.phet.molarity.MolaritySimSharing.UserComponents;
-import edu.umd.cs.piccolo.PCanvas;
+import edu.colorado.phet.molarity.model.Solution;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PPath;
 import edu.umd.cs.piccolo.nodes.PText;
@@ -70,9 +65,9 @@ class BeakerNode extends PComposite {
     private final ArrayList<PText> tickLabelNodes;
 
     public BeakerNode( IUserComponent userComponent,
-                       double maxVolume, String volumeUnits,
-                       String formula, Font formulaFont,
-                       double concentration, String concentrationUnits, Font concentrationFont,
+                       Solution solution, double maxVolume,
+                       String volumeUnits, String concentrationUnits,
+                       Font formulaFont, Font concentrationFont,
                        PDimension labelSize,
                        final double imageScaleX, final double imageScaleY,
                        Property<Boolean> valuesVisible ) {
@@ -139,7 +134,7 @@ class BeakerNode extends PComposite {
         }
 
         // label on the beaker
-        labelNode = new LabelNode( labelSize, formula, formulaFont, concentration, concentrationUnits, concentrationFont, valuesVisible );
+        labelNode = new LabelNode( solution, labelSize, formulaFont, concentrationFont, concentrationUnits, valuesVisible );
         addChild( labelNode );
         labelNode.setOffset( ( cylinderSize.getWidth() / 2 ), ( 0.15 * cylinderSize.getHeight() ) );
 
@@ -189,9 +184,8 @@ class BeakerNode extends PComposite {
         private final PNode textParentNode;
         private final PPath backgroundNode;
 
-        public LabelNode( final PDimension labelSize,
-                          String formula, final Font formulaFont,
-                          double concentration, String concentrationUnits, final Font concentrationFont,
+        public LabelNode( final Solution solution, final PDimension labelSize,
+                          final Font formulaFont, final Font concentrationFont, String concentrationUnits,
                           Property<Boolean> valuesVisible ) {
 
             this.concentrationUnits = concentrationUnits;
@@ -216,8 +210,19 @@ class BeakerNode extends PComposite {
             textParentNode.addChild( concentrationNode );
             addChild( textParentNode );
 
-            setText( formula );
-            setConcentration( concentration );
+            // update formula on label
+            solution.solute.addObserver( new SimpleObserver() {
+                public void update() {
+                    setText( solution.solute.get().formula );
+                }
+            } );
+
+            // update concentration on label
+            solution.concentration.addObserver( new VoidFunction1<Double>() {
+                public void apply( Double concentration ) {
+                    setConcentration( concentration );
+                }
+            });
 
             valuesVisible.addObserver( new VoidFunction1<Boolean>() {
                 public void apply( Boolean visible ) {
@@ -227,12 +232,12 @@ class BeakerNode extends PComposite {
             } );
         }
 
-        public void setText( String text ) {
+        private void setText( String text ) {
             formulaNode.setHTML( text );
             updateLayout();
         }
 
-        public void setConcentration( double concentration ) {
+        private void setConcentration( double concentration ) {
             String concentrationString = CONCENTRATION_FORMAT.format( concentration );
             String valueUnitsString = MessageFormat.format( Strings.PATTERN__0VALUE__1UNITS, concentrationString, concentrationUnits );
             concentrationNode.setText( MessageFormat.format( Strings.PATTERN__PARENTHESES__0TEXT, valueUnitsString ) );
@@ -261,38 +266,5 @@ class BeakerNode extends PComposite {
             textParentNode.setOffset( backgroundNode.getFullBoundsReference().getCenterX() - ( textParentNode.getFullBoundsReference().getWidth() / 2 ),
                                       backgroundNode.getFullBoundsReference().getCenterY() - ( textParentNode.getFullBoundsReference().getHeight() / 2 ) );
         }
-    }
-
-    // test
-    public static void main( String[] args ) {
-        Property<Boolean> valuesVisible = new Property<Boolean>( true );
-        // beaker
-        final BeakerNode beakerNode = new BeakerNode( UserComponents.solutionBeaker,
-                                                      1, "L",
-                                                      "Rat Poison", new PhetFont( Font.BOLD, 28 ),
-                                                      0.5, "M", new PhetFont( 16 ),
-                                                      new PDimension( 180, 80 ),
-                                                      0.75, 0.75,
-                                                      valuesVisible ) {{
-            setOffset( 200, 200 );
-        }};
-        // red dot at beaker cylinder's origin
-        final PPath originNode = new PPath( new Ellipse2D.Double( -3, -3, 6, 6 ) ) {{
-            setPaint( Color.RED );
-            setOffset( beakerNode.getOffset() );
-        }};
-        // canvas
-        final PCanvas canvas = new PCanvas() {{
-            getLayer().addChild( beakerNode );
-            getLayer().addChild( originNode );
-            setPreferredSize( new Dimension( 600, 600 ) );
-        }};
-        // frame
-        JFrame frame = new JFrame() {{
-            setContentPane( canvas );
-            pack();
-            setDefaultCloseOperation( WindowConstants.EXIT_ON_CLOSE );
-        }};
-        frame.setVisible( true );
     }
 }
